local storage test1

--- a/index.html
+++ b/index.html
@@ -251,8 +251,273 @@
 									[{
 										"id":"e0",
 										"source":"Asura",
-										"target":"Warrior"
-									}]
+										"target":"Warrior",
+										"weight":1
+									},
+									{
+										"id":"e1",
+										"source":"Asura",
+										"target":"Guardian",
+										"weight":1
+									},
+									{
+										"id":"e2",
+										"source":"Asura",
+										"target":"Revenant",
+										"weight":1
+									},
+									{
+										"id":"e3",
+										"source":"Asura",
+										"target":"Ranger",
+										"weight":1
+									},
+									{
+										"id":"e4",
+										"source":"Asura",
+										"target":"Engineer",
+										"weight":1
+									},
+									{
+										"id":"e5",
+										"source":"Asura",
+										"target":"Thief",
+										"weight":1
+									},
+									{
+										"id":"e6",
+										"source":"Asura",
+										"target":"Elementalist",
+										"weight":1
+									},
+									{
+										"id":"e7",
+										"source":"Asura",
+										"target":"Necromancer",
+										"weight":1
+									},
+									{
+										"id":"e8",
+										"source":"Asura",
+										"target":"Mesmer",
+										"weight":1
+									},
+									{
+										"id":"e9",
+										"source":"Sylvari",
+										"target":"Warrior",
+										"weight":1
+									},
+									{
+										"id":"e10",
+										"source":"Sylvari",
+										"target":"Guardian",
+										"weight":1
+									},
+									{
+										"id":"e11",
+										"source":"Sylvari",
+										"target":"Revenant",
+										"weight":1
+									},
+									{
+										"id":"e12",
+										"source":"Sylvari",
+										"target":"Ranger",
+										"weight":1
+									},
+									{
+										"id":"e13",
+										"source":"Sylvari",
+										"target":"Engineer",
+										"weight":1
+									},
+									{
+										"id":"e14",
+										"source":"Sylvari",
+										"target":"Thief",
+										"weight":1
+									},
+									{
+										"id":"e15",
+										"source":"Sylvari",
+										"target":"Elementalist",
+										"weight":1
+									},
+									{
+										"id":"e16",
+										"source":"Sylvari",
+										"target":"Necromancer",
+										"weight":1
+									},
+									{
+										"id":"e17",
+										"source":"Sylvari",
+										"target":"Mesmer",
+										"weight":1
+									},
+									{
+										"id":"e18",
+										"source":"Norn",
+										"target":"Warrior",
+										"weight":1
+									},
+									{
+										"id":"e19",
+										"source":"Norn",
+										"target":"Guardian",
+										"weight":1
+									},
+									{
+										"id":"e20",
+										"source":"Norn",
+										"target":"Revenant",
+										"weight":1
+									},
+									{
+										"id":"e21",
+										"source":"Norn",
+										"target":"Ranger",
+										"weight":1
+									},
+									{
+										"id":"e22",
+										"source":"Norn",
+										"target":"Engineer",
+										"weight":1
+									},
+									{
+										"id":"e23",
+										"source":"Norn",
+										"target":"Thief",
+										"weight":1
+									},
+									{
+										"id":"e24",
+										"source":"Norn",
+										"target":"Elementalist",
+										"weight":1
+									},
+									{
+										"id":"e25",
+										"source":"Norn",
+										"target":"Necromancer",
+										"weight":1
+									},
+									{
+										"id":"e26",
+										"source":"Norn",
+										"target":"Mesmer",
+										"weight":1
+									},
+									{
+										"id":"e27",
+										"source":"Human",
+										"target":"Warrior",
+										"weight":1
+									},
+									{
+										"id":"e28",
+										"source":"Human",
+										"target":"Guardian",
+										"weight":1
+									},
+									{
+										"id":"e29",
+										"source":"Human",
+										"target":"Revenant",
+										"weight":1
+									},
+									{
+										"id":"e30",
+										"source":"Human",
+										"target":"Ranger",
+										"weight":1
+									},
+									{
+										"id":"e31",
+										"source":"Human",
+										"target":"Engineer",
+										"weight":1
+									},
+									{
+										"id":"e32",
+										"source":"Human",
+										"target":"Thief",
+										"weight":1
+									},
+									{
+										"id":"e33",
+										"source":"Human",
+										"target":"Elementalist",
+										"weight":1
+									},
+									{
+										"id":"e34",
+										"source":"Human",
+										"target":"Necromancer",
+										"weight":1
+									},
+									{
+										"id":"e35",
+										"source":"Human",
+										"target":"Mesmer",
+										"weight":1
+									},
+									{
+										"id":"e36",
+										"source":"Charr",
+										"target":"Warrior",
+										"weight":1
+									},
+									{
+										"id":"e37",
+										"source":"Charr",
+										"target":"Guardian",
+										"weight":1
+									},
+									{
+										"id":"e38",
+										"source":"Charr",
+										"target":"Revenant",
+										"weight":1
+									},
+									{
+										"id":"e39",
+										"source":"Charr",
+										"target":"Ranger",
+										"weight":1
+									},
+									{
+										"id":"e40",
+										"source":"Charr",
+										"target":"Engineer",
+										"weight":1
+									},
+									{
+										"id":"e41",
+										"source":"Charr",
+										"target":"Thief",
+										"weight":1
+									},
+									{
+										"id":"e42",
+										"source":"Charr",
+										"target":"Elementalist",
+										"weight":1
+									},
+									{
+										"id":"e43",
+										"source":"Charr",
+										"target":"Necromancer",
+										"weight":1
+									},
+									{
+										"id":"e44",
+										"source":"Charr",
+										"target":"Mesmer",
+										"weight":1
+									},]
 								}));
 							}
 						}
