--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 									for (i = 0; i < data.length; i++) {
 										text += data[i].name+" "+data[i].race+" "+data[i].profession+"<br>";
 									}
-									document.getElementById("individual_graph").innerHTML = text;
+									document.getElementById("collective_graph").innerHTML = text;
 								});
 								localStorage.setItem('base_components', JSON.stringify({"nodes":
 									[{
