--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					<p id="graph"></p><br>
 					<p id="collective_graph"></p>
 					<script src="assets/js/sigma.min.js"></script>
-					<script src="assets/js/sigma.parsers.json.min.js"></script>
+					<script src="assets/js/plugins/sigma.parsers.json.min.js"></script>
 					<script>
 					function getKey() {
 						var key, check, url, full, text;
