--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 										"weight":1
 									},]
 								}));
-								sigma.parsers.json(JSON.parse(localStorage.getItem('base_components')), {
+								sigma.parsers.json(localStorage.getItem('base_components'), {
 									container: 'graph',
 									settings: {
 										defaultNodeColor: '#0000ff'
