clear graph after creation

--- a/index.html
+++ b/index.html
@@ -527,6 +527,7 @@
 									},]
 								};
 								var s = new sigma('graph');
+								s.clear();
 								s.graph.read(graph_data);
 								s.labelSizeRatio = 10;
 								s.refresh();
