--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 										"x":-2,
 										"y":-3,
 										"size":1,
-										"color":"ff0000"
+										"color":"#ff0000"
 									},
 									{
 										"id":"Warrior",
