test stop forceAtlas2

--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 								var s = new sigma('graph');
 								s.graph.read(graph_data);
 								s.startForceAtlas2({barnesHutOptimize: false});
-								s.refresh();
+								s.stopForceAtlas2();
 							}
 						}
 					}
