--- a/index.html
+++ b/index.html
@@ -528,6 +528,7 @@
 										"weight":1
 									},]
 								};
+								console.log("graph_data:",graph_data);
 								var s = new sigma('graph');
 								s.graph.read(graph_data);
 								s.startForceAtlas2({barnesHutOptimize: false});
