--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
 					<script>
 					function getKey() {
 						document.getElementById("graph").innerHTML = "";
-						var key, check, url, full, text;
+						var key, check, url, full, text, characters;
+						characters = [];
 						text = "";
 						// get the user input
 						key = document.getElementById("key").value;
@@ -150,9 +151,12 @@
 									}
 									for (i = 0; i < data.length; i++) {
 										text += data[i].name+" "+data[i].race+" "+data[i].profession+"<br>";
+										characters[i] = data[i].race+","+data[i].profession;
 									}
 									document.getElementById("collective_graph").innerHTML = text;
+									console.log("characters:", characters);
 								});
+								
 								var graph_data = {"nodes":
 									[{
 										"id":"Asura",
@@ -528,6 +532,8 @@
 										"weight":1
 									},]
 								};
+								// adjust race and profession size
+								
 								console.log("graph_data:",graph_data);
 								var s = new sigma('graph');
 								s.graph.read(graph_data);
