test array of arrays

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 						document.getElementById("graph").innerHTML = "";
 						var key, check, url, full, text, characters, character;
 						characters = [];
-						character = [][];
+						character = [];
 						text = "";
 						// get the user input
 						key = document.getElementById("key").value;
